--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -23,19 +23,19 @@
   </ion-list>
 
   <ion-item lines="none">
-    <ion-label>{{ titleTicketOne }}</ion-label>
-
-    <ion-label>{{ titleTicketOne }}</ion-label>
+    <!-- label acima do input -->
+    <ion-label position="stacked">{{ titleTicketOne }}</ion-label>
     <ion-input
       type="number"
       [(ngModel)]="searchTicket"
       #searchbarInput
       (keyup.enter)="setFilteredItems()"
       placeholder="Digite o número do ticket"
-      clearInput>
-    </ion-input> 
-
+      clearInput
+    ></ion-input>
   </ion-item>
+
+  
 
   <ion-list>
     
