Versão Web 1.0 Stable

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,7 +22,7 @@
     <ion-spinner name="crescent" [color]="dataInfo.spinnerColor"></ion-spinner>
   </ion-list>
 
-  <ion-item lines="none">
+  <ion-item lines="none" style="margin-top: 10px;">
     <!-- label acima do input -->
     <ion-label position="stacked">{{ titleTicketOne }}</ion-label>
     <ion-input
