--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,7 +6,7 @@
           <img
             src="assets/imgs/logo.png"
             alt="Logo"
-            style="max-width: 200px; height: auto;"
+            style="width: 200px; height: auto;"
           />
         </ion-col>
         <ion-col size="6">
